--- a/style/style.css
+++ b/style/style.css
@@ -5,3 +5,43 @@
 
     font-family: "Open Sans", sans-serif;
 }
+
+.limitation-main{
+    width: 120rem;
+}
+
+header {
+    height: 5rem;
+}
+
+.horizontal-alignment{
+    display: flex;
+    flex-direction: row;
+}
+
+section.navigation-section{
+    width: 100%;
+    justify-content: space-between;
+    padding: 1.5rem;
+}
+[alt="dropbox logo"] {
+    height: 1.8rem;
+    margin-top: 0.2rem;
+    margin-right: 1rem;
+}
+
+ul{
+    list-style-type: none;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+    margin: 0.5rem 1rem;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.gray-color{
+    color: #717171;;
+}
