--- a/style/style.css
+++ b/style/style.css
@@ -49,10 +49,13 @@ ul{
     list-style-type: none;
 }
 
+header a{
+    margin: 0.5rem 1rem;
+}
+
 a{
     text-decoration: none;
     color: black;
-    margin: 0.5rem 1rem;
     display: inline-block;
     vertical-align: top;
     font-size: 1rem
@@ -87,7 +90,7 @@ section.jumbotron button{
     margin: 2rem 0;
 }
 
-header i{
+body > header i{
     margin: 4rem 0 1.5rem 0;
     font-size: 3rem;
     font-size: bold;
@@ -113,8 +116,22 @@ section.input{
     margin-left: 2rem
 }
 
+section.piani{
+    justify-content: space-between;
+}
+
 article{
     border: 2px solid #dfdfe1;
+    width: calc((68rem / 3) - 1rem);
+}
+
+article > header {
+    border-bottom: 2px solid #dfdfe1;
+    padding: 1rem;
+}
+
+article > main {
+    padding: 1.5rem 1rem;
 }
 
 /* ? color section*/
@@ -133,4 +150,8 @@ article{
 
 .light-blue-back{
     background-color: #b4d0e7;
+}
+
+.azure-color{
+    color: #005eff;
 }
