--- a/style/style.css
+++ b/style/style.css
@@ -286,24 +286,83 @@ section.operazion a {
 }
 
 section.squares {
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(6, 1fr);
-
-    grid-auto-flow: dense;
-
     height: 40rem;
-    /* background-color: blue; */
 }
 
-section.squares > article {
-    /* background-color: red; */
-    height: calc((100% / 2));
+section.squares > section > article {
+    height: 20rem;
+    aspect-ratio: 1/1;
+
+    position: relative;
 }
 
-.img-2x2{
-    grid-row-end: span 2;
-    grid-column-end: span 2;
+section.squares > section > article >img{
+    width: 60%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    
+}
+
+section.container-4x4{
+    width: 40rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+section.squares > div{
+    background-color: #f5f5f5;
+}
+
+article.big-section{
+    flex-grow: 1;
+    width: calc(100vw - 80rem);
+    padding: 3rem;
+    overflow: scroll;
+    max-height: 40rem;
+}
+
+article.big-section img{
+    width: 60%;
+}
+
+article.big-section p{
+    margin: 2.5rem 0;
+}
+
+/* ! img section */
+#designit {
+    background-color: #a2d39b;
+    border: 15px #d1e9cd solid;
+}
+
+#asu {
+    background-color: #61082b;
+}
+
+#uf {
+    background-color: #0093ce;
+}
+
+#topps {
+    background-color: #ff1c1c;
+}
+
+#wbr {
+    background-color: #d5001f;
+}
+
+#hearst {
+    background-color: #b4d0e7;
+}
+
+#lonely {
+    background-color: #0d2481;
+}
+
+#clear{
+    background-color: #ffd830;
 }
 
 /* ? color section*/
