--- a/style/style.css
+++ b/style/style.css
@@ -342,6 +342,10 @@ section.prova-gratuita button {
     background-color: white;
 }
 
+section.faq{
+    margin: 6rem auto;
+}
+
 /* ! img section */
 
 #designit {
