--- a/supporto/style/style.css
+++ b/supporto/style/style.css
@@ -148,6 +148,36 @@ main nav.articles article li{
     font-size: 1.2rem;
 }
 
+main h2 {
+    text-align: center;
+    font-size: 3rem;
+}
+
+main h2 + p{
+    text-align: center;
+    line-height: 2rem;
+    margin-bottom: 3rem;
+}
+
+main section.products {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+main section.products > article{
+    width: calc((100% / 4) - 1.5rem);
+    margin-bottom: 4rem;
+}
+
+main section.products > article h4{
+    margin: 1.5rem 0 1.5rem 0;
+}
+
+main section.products > article p{
+    line-height: 1.5rem;
+}
+
 /* ? COLORS */
 .gray-color{
     color: #979797;
