--- a/supporto/style/style.css
+++ b/supporto/style/style.css
@@ -188,6 +188,37 @@ main section.brown-back section.horizontal-alignment p{
     margin: 2rem 0;
 }
 
+main .info-container{
+    justify-content: center;
+    align-items: flex-start;
+}
+
+main .info-container article.more-info {
+    width: calc((100% / 3) - 1.5rem);
+    background-color: white;
+    padding: 2rem 2rem 6rem 2rem;
+    text-align: center;
+}
+
+main .info-container article.more-info img{
+    padding: 2rem;
+}
+
+main .info-container article.more-info h3{
+    font-size: 2.3rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
+}
+
+main .info-container article.more-info p{
+    margin-bottom: 2rem;
+}
+
+main .info-container article.more-info:nth-child(even){
+    border-left: 1px solid #c6c4c2;
+    border-right: 1px solid #c6c4c2;
+}
+
 /* ? COLORS */
 .gray-color{
     color: #979797;
