--- a/supporto/style/style.css
+++ b/supporto/style/style.css
@@ -219,6 +219,47 @@ main .info-container article.more-info:nth-child(even){
     border-right: 1px solid #c6c4c2;
 }
 
+/* ! FOOTER */
+
+footer > section:first-child{
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 5rem 8rem 2rem 8rem;
+}
+
+footer > section:first-child > section{
+    width: calc((100% / 6) - 3rem);
+}
+
+footer > section:first-child > section h3{
+    margin-bottom: 1.5rem;
+}
+
+footer > section:first-child > section li{
+    margin: 1rem 0;
+    font-size: 0.9rem;
+}
+
+footer > section {
+    padding: 0 8rem 0 8rem;
+}
+
+footer .social > *{
+    margin-right: 1rem;
+    font-size: 1.1rem;
+}
+
+footer hr{
+    width: 6rem;
+    margin: 3rem 0 2rem 0;
+}
+
+footer .language > *{
+    margin-right: 1rem;
+    font-size: 0.8rem;
+    margin-bottom: 3rem;
+}
+
 /* ? COLORS */
 .gray-color{
     color: #979797;
@@ -238,4 +279,8 @@ main .info-container article.more-info:nth-child(even){
 
 .beige-back{
     background-color: #f7f5f2;
+}
+
+.black-back{
+    background-color: black;
 }
